2005-10-25  Roland Dreier  <roland@cisco.com>

	* examples/rc_pingpong.c, examples/srq_pingpong.c,
	examples/uc_pingpong.c, examples/ud_pingpong.c: Keep track of
	whether send and/or receive is pending.  This avoids failures when
	the remote side receives data and posts a send very quickly, and
	the local side completes the receive before the previous send.
	With the old code, this could result in posting a send before the
	previous send completed, and therefore overrun the send queue.

2005-10-23  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_get_context_v2): Correct silly mistake in
	computation of size of buffer for old ABI command: we need to use
	sizeof *cmd instead of sizeof cmd, since cmd is a pointer.

2005-10-21  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_post_send, ibv_cmd_post_recv,
	ibv_cmd_post_srq_recv): Correct value that we check write() return
	value against so that we check against the size we actually try to
	write, instead of just sizeof cmd.

2005-10-19  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_req_notify_cq): Correct how we pass
	solicited_only flag into the kernel.

2005-10-13  Roland Dreier  <roland@cisco.com>

	* include/infiniband/driver.h, src/cmd.c, src/libibverbs.map: Add
	command functions for calling new kernel commands.

	* include/infiniband/verbs.h: Add qp_type to struct ibv_qp so that
	we know when we're posting a send on a UD QP, and add kernel
	handle member to struct ibv_ah so we can handle drivers that do
	create AH and destroy AH operations in the kernel.
	
	* include/infiniband/kern-abi.h: Add new command structures for
	poll CQ, request notification for CQ, post send, post receive,
	post SRQ receive, create AH and destroy AH commands.  These will
	be used by the PathScale userspace driver.

2005-10-12  Roland Dreier  <roland@cisco.com>

	* examples/srq_pingpong.c (main): Zero out unused entries in
	my_dest array to avoid string overflows when we send to the other
	side.
